crates/rolldown/tests/rolldown/errors/unresolved_import/external/entry.js
import { test } from "test/abc"

console.log(test)